ukui-settings-daemon (3.1.0-1.12) v101; urgency=medium

  * BUG号：83325 【快捷键】【PTOF】自动化脚本频繁多次使用快捷键后，快捷键会失效（如ctrl+alt+t打开终端） 
           82385 [x100][主线]在外接屏下，win+p键无法正常切换镜像屏与扩展屏 
           83542 【USD】进入系统，开启大写，系统重启后查看大写为关闭状态
           86157 【需求转化-显示器】win+p文案需要和控制面板多屏显示设置项保持一致（文案为 接口1/接口2/镜像/扩展）
           83945 【UKUI V3.1】【控制面板】【显示】控制面板中设置多屏显示不会同步到win+p中，在win+p中设置多屏显示可以同步到控制面板
  * 需求说明：无
  * 其他修改说明:1.优化音量控制快捷键的处理逻辑，采用实时获取的方式进行处理。
                 2.添加systemd handlePowerkey 配置

 -- sundagao <sundagao@skylinos.cn>  Wed, 27 Oct 2021 20:50:20 +0800

ukui-settings-daemon (3.1.0-1.11) v101; urgency=medium

  * BUG号：无
  * 需求说明：无
  * 其他修改说明：进行OTA升级配置

 -- sundagao <sundagao@kylinos.cn>  Thu, 21 Oct 2021 19:46:23 +0800

ukui-settings-daemon (3.1.0-1.10) v101; urgency=medium

  * BUG号：61778 【显示器】【用例#104512】接HDMI和VGA双屏，设置VGA为主屏的情况，拔插VGA线，概率出现VGA显示背景为黑色，任务栏不显示
           85696 紧急【浪潮信息】-【CE520L】-【Kylin-Desktop-V10-SP1-OEM-LC-20211014-loongarch64】系统开机后接入显示器不显示
           85922 【触摸板】连接外显且模式为扩展时，触摸板灵敏度过高导致很难控制，镜像模式时则正常
           77138 【专项测试】【USD】大小写、数字键设置开启/关闭后重启，重启后无法记住重启前设置
           86396 【PTOF】【键盘】在连接USB耳机的情况下音量快捷键失效。（必现）
  * 需求说明：无
  * 其他修改说明：无
 -- sundagao <sundagao@kylinos.cn>  Thu, 21 Oct 2021 19:44:09 +0800

ukui-settings-daemon (3.1.0-1.9) v101; urgency=medium

  * BUG号：78070 【USD】本地注销产生core文件
           85550【PTOF】【TM/PC】【显示器】平板模式-竖屏状态连接外显，外显屏显示一半黑屏(内显正常显示)(2/3 units 3/10 times)
   * 需求号：无
   * 其他改动说明：无

 -- chenxiaohui <chenxiaohui@kylinos.cn>  Tue, 19 Oct 2021 15:01:43 +0800

ukui-settings-daemon (3.1.0-1.8) v101; urgency=medium
 
  * BUG号： 84944 【PTOF】【键盘】在麒麟影音中打开多条视频，f10功能键切换播列表中下一条视频失效，f8、f9按键功能正常（必现） 
            84503 【PTOF】【UKUI V3.1】【Intel 0930版本】【键盘】 按键盘的Caps Lock切换大小写，功能切换成功，但切换时屏幕右下方仅显示白色提示框，提示框内无图标。（必现） 
  * 需求号：无
  * 其他改动说明：无

 -- sundagao <sundagao@kylinos.cn>  Fri, 15 Oct 2021 15:43:51 +0800

ukui-settings-daemon (3.1.0-1.7) v101; urgency=medium

  * BUG号：85307【PTOF】【键盘】通过快捷键ctrl+alt+p无法打开护眼中心
  * 需求号：无
  * 其他改动说明：无  
