@@ -1,7 +1,10 @@
 #include "rfkillswitch.h"
+#include <QProcess>
+#include <QDebug>
 #include <QDir>
-#include <QFile>
-#include <QTextStream>
+#include <QDBusReply>
+#include <QDBusInterface>
+#include <QDBusConnection>
 
 
 RfkillSwitch *RfkillSwitch::m_rfkillInstance = new RfkillSwitch();
@@ -199,6 +202,196 @@ QString RfkillSwitch::toggleFlightMode(bool enable){
     return block ? QString("block"):QString("unblock");
 }
 
+
+QString RfkillSwitch::getWifiState()
+{
+
+    if(!wifiDeviceIsPresent()){
+        return "";
+    }
+
+    QString cmd  = "nmcli radio wifi";
+    QProcess process;
+    process.start(cmd);
+    process.waitForStarted();
+    process.waitForFinished();
+    QString wifiState = QString::fromLocal8Bit(process.readAllStandardOutput());
+    wifiState.replace("\n","");
+
+    return wifiState;
+}
+
+bool RfkillSwitch::wifiDeviceIsPresent()
+{
+
+    QDBusInterface m_interface( "org.freedesktop.NetworkManager",
+                              "/org/freedesktop/NetworkManager",
+                              "org.freedesktop.NetworkManager",
+                              QDBusConnection::systemBus() );
+
+   //先获取所有的网络设备的设备路径
+   QDBusReply<QList<QDBusObjectPath>> obj_reply = m_interface.call("GetAllDevices");
+   if (!obj_reply.isValid()) {
+       qDebug()<<"execute dbus method 'GetAllDevices' is invalid in func getObjectPath()";
+       return false;
+   }
+
+   QList<QDBusObjectPath> obj_paths = obj_reply.value();
+
+   //再判断有无有线设备和无线设备的路径
+   Q_FOREACH (QDBusObjectPath obj_path, obj_paths) {
+       QDBusInterface interface( "org.freedesktop.NetworkManager",
+                                 obj_path.path(),
+                                 "org.freedesktop.DBus.Introspectable",
+                                 QDBusConnection::systemBus() );
+
+       QDBusReply<QString> reply = interface.call("Introspect");
+       if (reply.isValid()) {
+           if (reply.value().indexOf("org.freedesktop.NetworkManager.Device.Wireless") != -1) {
+               //表明有wifi设备
+               return true;
+           }
+       }
+   }
+   return false;
+}
+
+void RfkillSwitch::turnWifiOn()
+{
+    QString cmd = "nmcli radio wifi on";
+    QProcess::execute(cmd);
+}
+
+void RfkillSwitch::turnWifiOff()
+{
+    QString cmd = "nmcli radio wifi off";
+    QProcess::execute(cmd);
+}
+
+//Camera
+
+QString RfkillSwitch::getCameraBusinfo(){
+
+    QString path = QString("/sys/bus/usb/devices/");
+    QDir dir(path);
+    if (!dir.exists()){
+        return QString();
+    }
+    dir.setFilter(QDir::Dirs);
+    dir.setSorting(QDir::Name);
+    QFileInfoList fileinfoList = dir.entryInfoList();
+
+    for(QFileInfo fileinfo : fileinfoList){
+        if (fileinfo.fileName() == "." || fileinfo.fileName() == ".."){
+            continue;
+        }
+
+        if (fileinfo.fileName().contains(":")){
+            continue;
+        }
+
+        if (fileinfo.fileName().startsWith("usb")){
+            continue;
+        }
+//        qDebug() << "" << fileinfo.fileName() << fileinfo.absoluteFilePath();
+        QDir subdir(fileinfo.absoluteFilePath());
+        subdir.setFilter(QDir::Files);
+        QFileInfoList fileinfoList2 = subdir.entryInfoList();
+        for (QFileInfo fileinfo2 : fileinfoList2){
+            if (fileinfo2.fileName() == "product"){
+                QFile pfile(fileinfo2.absoluteFilePath());
+                if (!pfile.open(QIODevice::ReadOnly | QIODevice::Text))
+                    return QString();
+                QTextStream pstream(&pfile);
+                QString output = pstream.readAll();
+//                qDebug() << "output: " << output;
+                if (output.contains("camera", Qt::CaseInsensitive)){
+                    return fileinfo.fileName();
+                }
+
+            }
+        }
+
+    }
+
+    return QString();
+}
+
+
+int RfkillSwitch::getCameraDeviceEnable(){
+
+    QString businfo = getCameraBusinfo();
+    if (businfo.isEmpty()){
+        char * cmd = "lsusb -t | grep 'Driver=uvcvideo'";
+        char output[1024] = "\0";
+
+        FILE * stream;
+        if ((stream = popen(cmd, "r")) == NULL){
+            return -1;
+        }
+
+        int ret;
+        if (fread(output, sizeof(char), 1024, stream) <= 0){
+            //no Camera Device
+            ret = 0;
+        } else {
+            //Camera Device Present
+            ret = 1;
+        }
+        fclose(stream);
+        return ret;
+    }
+
+    int isExists = 0;
+
+    QString path = QString("/sys/bus/usb/drivers/usb/");
+    QDir dir(path);
+    if (!dir.exists()){
+        return -1;
+    }
+    dir.setFilter(QDir::Dirs);
+    dir.setSorting(QDir::Name);
+    QFileInfoList fileinfoList = dir.entryInfoList();
+
+    for(QFileInfo fileinfo : fileinfoList){
+        if (fileinfo.fileName() == "." || fileinfo.fileName() == ".."){
+            continue;
+        }
+
+        if (fileinfo.fileName().contains(":")){
+            continue;
+        }
+
+        if (fileinfo.fileName() == businfo){
+            isExists = 1;
+        }
+    }
+
+    return isExists;
+}
+
+QString RfkillSwitch::toggleCameraDevice(QString businfo){
+
+    QString path = QString("/sys/bus/usb/drivers/usb/");
+
+    int status = getCameraDeviceEnable();
+
+    if (status == -1){
+        return QString("Camera Device Not Exists!");
+    }
+
+    if (status){
+        QString cmd = QString("echo '%1' > %2/unbind").arg(businfo).arg(path);
+        system(cmd.toLatin1().data());
+        return QString("unbinded");
+    } else {
+        QString cmd = QString("echo '%1' > %2/bind").arg(businfo).arg(path);
+        system(cmd.toLatin1().data());
+        return QString("binded");
+    }
+}
+
+
 const char * getRFkillName(__u32 idx){
 
     static char name[128] = {};
@@ -248,3 +441,5 @@ const char * getRFkillType(__u32 idx){
 
     return name;
 }
+
+
