@@ -1,3 +1,14 @@
+ukui-settings-daemon (3.1.0-1.13) v101; urgency=medium
+
+  * BUG号： 88798 【双屏】【必现】win+p调节双屏模式异常-无法通过win+p切换复制模式和拓展模式，切换到仅edp屏幕后会自动到镜像模式，从仅hdmi屏切到拓展屏幕，内置屏幕黑屏  
+            88764 【双屏】【必现】win+p打开的双屏模式调节面板，始终展示当前模式为第一屏模式，不随模式切换而变化
+            82385 [x100][主线]在外接屏下，win+p键无法正常切换镜像屏与扩展屏  
+  * 需求说明：无
+  * 其他修改说明：1.修复网络开关按钮关闭wifi时，wifi快捷键无法打开
+                  2.修复usd第一次启动时，快捷键无法设置声音问题
+
+ -- sundagao <sundagao@kylinos.cn>  Wed, 03 Nov 2021 19:11:10 +0800
+
 ukui-settings-daemon (3.1.0-1.12) v101; urgency=medium
 
   * BUG号：83325 【快捷键】【PTOF】自动化脚本频繁多次使用快捷键后，快捷键会失效（如ctrl+alt+t打开终端） 
